--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,17 +1,63 @@
 #navbar {
     display: flex;
     align-items: center;
-    color: white;
+    justify-content: space-between;
     background-color: red;
+    color: white;
     height: 80px;
+    margin-bottom: 40px;
+    font-size: xx-large;
+    padding: 10px;
+}
+
+#Display {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .card {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     border-color: red;
     color: red;
     border-style: solid;
     max-width: 500px;
+    margin-right: 10px;
+    padding: 2px;
+}
+
+.card div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+}
+
+.card p {
+    max-width: 300px;
+}
+
+ul {
+    list-style-type: none;
+    padding: 2px;
+}
+
+button {
+    border-style: solid;
+    border-color: red;
+    background-color: white;
+    color: red;
+    height: 40px;
+}
+
+button:hover {
+    border-style: solid;
+    border-color: red;
+    background-color: red;
+    color: white;
+    height: 40px;
+    cursor: pointer;
 }
