--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,7 +10,7 @@
     padding: 10px;
 }
 
-#Display {
+#display {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -18,6 +18,7 @@
 
 .card {
     display: flex;
+    cursor: pointer;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -26,22 +27,6 @@
     border-style: solid;
     max-width: 500px;
     margin-right: 10px;
-    padding: 2px;
-}
-
-.card div {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
-}
-
-.card p {
-    max-width: 300px;
-}
-
-ul {
-    list-style-type: none;
     padding: 2px;
 }
 
