--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Roboto';
+}
+
 #navbar {
     display: flex;
     align-items: center;
@@ -14,6 +18,22 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+}
+
+#home {
+    display: flex;
+}
+
+#filter div {
+    background-color: rgb(213, 210, 210);
+    margin-bottom: 3px;
+}
+
+.filter-div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 300px;
 }
 
 .card {
